Add simple result wrapper.